Upgrade to Gradle 6.7-rc-1 and declare target Java versions for each project.